--- a/index.css
+++ b/index.css
@@ -39,6 +39,8 @@ html{
     background-color: black;
     opacity: 0;
     transition: all 500ms;
+
+    z-index: -1;
 }
 
 #topBar{
@@ -218,14 +220,11 @@ html{
     width: 100vw;
     padding: 32px 8px;
 
-    background-color: var(--secondary);
-
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     gap: 32px;
-
 }
 
 .cajaCaracteristica{
